[package]
name = "emoji-game"
version = "0.1.0"
authors = ["redaphid <iam@aaronherres.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 maplit = "1.0.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"